added dimension selector prompt and added shadcn usage and tooltip support for all tools

--- a/src/components/styles/colors.scss
+++ b/src/components/styles/colors.scss
@@ -1,6 +1,8 @@
 $background-base: #0a0a0a;
+$background-base-cthrough: #1b1b1b9f;
 $background-base-hover: #1a1a1a;
 $text-base: #ffffff;
+$text-not-focused: #a3a3a3;
 $text-base-hover: #cfcfcf;
 $text-darker: #bebebe;
 $separator-color: #333333;
