[feature] added layers panel

--- a/src/components/styles/colors.scss
+++ b/src/components/styles/colors.scss
@@ -1,3 +1,4 @@
+$background-base-light: #202020;
 $background-base: #0a0a0a;
 $background-base-cthrough: #1b1b1b9f;
 $background-base-hover: #1a1a1a;
